refactored the service infrastructure. not happy with it, and untested. but fingers crossed.